--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,6 +21,9 @@ p {
     padding: 0;
 }
 main {
+    max-width: 840px;
+}
+aside {
     width: 20rem;
     margin: 1rem;
     border: 1px solid rgb(0 0 0 / 0.2);
