--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,10 @@
+:root{
+    --big-colour: darkblue;
+    --default-bourder: 1px solid black;
+}
+
 nav {
-    background-color: darkblue;
+    background-color: var(--big-colour);
     padding: 10px;
 }
 nav a {
@@ -8,12 +13,12 @@ nav a {
     padding: 20px;
 }
 h1 {
-    color: darkblue;
+    color: var(--big-colour);
 }
 main img {
     width: 150px;
     height: auto;
-    border: 1px solid black;
+    border: var(--default-bourder);
     padding: 2px;
     box-shadow: 0 0 30px gray;
 }
@@ -26,7 +31,7 @@ main {
 aside {
     width: 20rem;
     margin: 1rem;
-    border: 1px solid rgb(0 0 0 / 0.2);
+    border: var(--default-bourder);
     padding: 1rem;
     background-color: #eee;
     color: #333;
@@ -38,6 +43,6 @@ aside img {
 }
 footer {
     margin-top: 15px;
-    border-top: 1px solid #000;
+    border-top: var(--default-bourder);
     text-align: center;
 }
