--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 :root{
     --big-colour: darkblue;
     --default-bourder: 1px solid black;
@@ -29,10 +34,8 @@ main {
     max-width: 840px;
 }
 aside {
+    position: relative;
     width: 20rem;
-    margin: 1rem;
-    border: var(--default-bourder);
-    padding: 1rem;
     background-color: #eee;
     color: #333;
     text-align: center;
@@ -40,9 +43,24 @@ aside {
 aside img {
     width: 200px;
     height: auto;
+    float: right;
+}
+aside h2 {
+  position: absolute;
+  top: 80px;
+  left: 240px;
 }
 footer {
     margin-top: 15px;
     border-top: var(--default-bourder);
     text-align: center;
+}
+
+/* CLass Selectors */
+.box {
+    margin: 1rem;
+    padding: 1rem;
+    border: var(--default-bourder);
+    background-color: maroon;
+    color: sandybrown;
 }
