--- a/week04/styles/layout-exercises.css
+++ b/week04/styles/layout-exercises.css
@@ -19,6 +19,7 @@ div {
 .one {
     width: 200px;
     height: 200px;
+    display: flex;
 }
 
 .flex {
@@ -30,12 +31,15 @@ div {
 .grid {
     background-color: #abb;
     /* enter declarations here */
+    display: grid;
 
 }
 
 .container2 {
     /* write declarations here */
-
+    display: flex;
+    justify-content: space-around;
+    align-content: space-around;
 }
 
 .two {
@@ -45,12 +49,13 @@ div {
 
 .container3 {
     /* write declarations here */
-
+    display: grid;
+    grid-template: repeat(3,1fr) / repeat(3,1fr);
 }
 
 .columns-3 {
     /* write declaration here */
-
+    grid-column: 1/4;
 }
 
 .three {
