--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,22 +3,33 @@
     padding: 0;
     box-sizing: border-box;
 }
+header, .grid, footer {
+  max-width: 840px;
+  margin: 0 auto;
+}
 :root{
     --big-colour: darkblue;
     --default-bourder: 1px solid black;
 }
 
 nav {
-    background-color: var(--big-colour);
-    padding: 10px;
+  background-color: steelblue;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 nav a {
-    color: white;
-    display: block;
-    padding: 20px;
+  display: block;
+  padding: 0.5rem;
+  text-decoration: none;
+  font-size: 1.2rem;
+  font-weight: 700;
+  color: #fff;
 }
 h1 {
     color: var(--big-colour);
+    border-bottom: 5px solid #333;
 }
 main img {
     width: 150px;
@@ -30,15 +41,21 @@ main img {
 p {
     padding: 0;
 }
-main {
-    max-width: 840px;
+.grid {
+  display: grid;
+  align-items: center;
 }
+    
+main {
+  grid-column: 2/3;
+  margin: 1rem;
+}
+    
 aside {
-    position: relative;
-    width: 20rem;
-    background-color: #eee;
-    color: #333;
-    text-align: center;
+  width: 20rem;
+  position: relative;
+  grid-column: 1/2;
+  grid-row: 1/2;
 }
 aside img {
     width: 200px;
