--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -7,7 +7,6 @@
     --body-font: Arial, Helvetica, Sans-serif;
 }
 * {
-
     padding: 0;
     box-sizing: border-box;
 }
@@ -22,6 +21,9 @@ header, main, footer {
 header {
     display: grid;
     grid-template-columns: 1fr 2fr;
+}
+footer {
+    display: flex;
 }
 .navigation {
     display: flex;
@@ -40,7 +42,6 @@ nav, p, section, article {
 }
 .socialmedia a {
     text-decoration: none;
-    background-color: var(--accent2-colour);
 }
 .hero {
     position: relative;
@@ -68,3 +69,22 @@ h1 {
     float: right;
     width: 125px;
 }
+.history div{
+    display: flex;
+    justify-content: center;
+}
+.history h2 {
+    justify-self: center;
+}
+.history img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    align-self: center;
+}
+.adventure h2 {
+    justify-self: center;
+}
+.adventure div{
+    display: grid;
+    grid-template-columns: repeat(5,20%);
