--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -25,6 +25,13 @@ header {
 }
 footer {
     display: flex;
+    position: relative;
+    flex-direction: row-reverse;
+}
+footer p {
+    position: absolute;
+    left: 50%;             
+    transform: translateX(-50%);
 }
 .navigation {
     display: flex;
@@ -79,8 +86,8 @@ h1 {
     justify-self: center;
 }
 .history img {
-    width: 100%;
-    height: 100%;
+    width: 25%;
+    height: 25%;
     object-fit: contain;
     align-self: center;
 }
@@ -90,4 +97,11 @@ h1 {
 .adventure div{
     display: grid;
     grid-template-columns: repeat(5,20%);
+}
+.adventure img {
+    max-width: 100%;
+    padding: 20px;
+}
+figcaption {
+    text-align: center;
 }
