--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -10,6 +10,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
 }
 body {
     font-family: var(--body-font);
@@ -22,11 +23,13 @@ header, main, footer {
 header {
     display: grid;
     grid-template-columns: 1fr 2fr;
+    background-color: var(--accent2-colour);
 }
 footer {
     display: flex;
     position: relative;
     flex-direction: row-reverse;
+    background-color: var(--accent2-colour);
 }
 footer p {
     position: absolute;
@@ -95,8 +98,8 @@ h1 {
     justify-self: center;
 }
 .adventure div{
-    display: grid;
-    grid-template-columns: repeat(5,20%);
+    display: flex;
+    justify-content: space-around;
 }
 .adventure img {
     max-width: 100%;
@@ -104,4 +107,47 @@ h1 {
 }
 figcaption {
     text-align: center;
+}
+.info p, h2 {
+    margin: 0px;
+    justify-self: center;
+    padding: 5px;
+}
+.info{
+    margin: 10px;
+}
+iframe, form {
+    flex: none;
+    height: 350px;
+    width: 40%;
+    margin-right: 50px;
+}
+.contact {
+    display: flex;
+}
+form {
+    display: block;
+    padding: 10px;
+}
+.message-radio{
+    display: grid;
+    justify-content: right;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+}
+.form-item {
+    margin: 10px;
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+input[type=radio]{
+    height:20px;
+}
+input[type=checkbox]{
+    margin: 10px;;
+}
+button {
+    width: 100%;
+    height: 30px;
 }
